Cleaned up. Fixed scroll overlap issues

--- a/style.css
+++ b/style.css
@@ -152,8 +152,6 @@ a {
 
   display: flex;
   flex-direction: column;
-
-  -webkit-overflow-scrolling: touch;
 }
 
 .section h2 {
